--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ font-family: 'Lora' , sans-serif;
 
 nav ul{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     list-style-type: none;
     height: 65px;
@@ -53,7 +54,8 @@ nav ul li{
     padding-bottom: 34px;
     background-size: cover;
     background-position: center;
-    transition: background-image 0.5s ease-in-out; 
+    transition: background-image 0.5s ease-in-out;
+    height: auto; 
 }
 .bottom{
     position: sticky;
@@ -100,6 +102,7 @@ nav ul li{
 .songItem{
 height: 50px;
 display: flex;
+flex-direction: row;
 background-color:#E1CFE8;
 
 color: #2D0D54;
@@ -146,15 +149,55 @@ align-items: center;
         opacity: 1;
     }
 }
+
+/* Media Query for Tablets */
 @media (max-width: 768px) {
     .container {
         width: 90%;
         padding: 20px;
     }
+
     .songItem {
+        height: auto;
         flex-direction: column;
-        align-items: center;
-        text-align: center;
+        align-items: flex-start;
+    }
+
+    .songItem img {
+        width: 35px;
+        margin: 10px 0;
     }
 }
+/* Media Query for Mobile Devices */
+@media (max-width: 480px) {
+    nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
+    .container {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .songItem {
+        font-size: 14px;
+        height: auto;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .songItem img {
+        width: 30px;
+        margin: 5px 0;
+    }
+
+    #myProgressBar {
+        width: 100%;
+    }
+
+    .bottom {
+        height: auto;
+        padding: 10px;
+    }
+}
